modification du fichier html test1, ajout du fichier html test3

--- a/test1.html
+++ b/test1.html
@@ -7,6 +7,31 @@
     <title>Test 1 GitHub</title>
 </head>
 <body>
+
+    <header>
+        <nav>
+
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <article>
+                <div>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+
+                </div>
+
+            </article>
+        </section>
+    </main>
+    <footer>
+
+    </footer>o
     
 </body>
 </html>
